--- a/goldwin_led_controller.yaml
+++ b/goldwin_led_controller.yaml
@@ -3,39 +3,12 @@ substitutions:
   pretty_name: ""
   device_type: "Goldwin LED Controller"
   icon: ""
+  board: "esp01_1m"
+  framework_version: "recommended"
+  logger_level: INFO
 
-esphome:
-  name: ${device_name}
-  comment: "${device_type}"
-
-esp8266:
-  board: esp01_1m
-
-logger:
-
-api:
-  encryption:
-    key: !secret api_key
-
-ota:
-  password: !secret ota_password
-
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-  power_save_mode: HIGH # for ESP8266 LOW/HIGH are mixed up, esphome/issues/issues/1532
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
-  ap:
-    ssid: "${device_name} Fallback"
-    password: !secret fallback_password
-
-captive_portal:
-
-# web_server:
-#   port: 80
-#   auth:
-#     username: admin
-#     password: !secret web_server_password
+# Common ESP8266 Config
+<<: !include .common_esp8266.yaml
 
 # Device Specific Config
 light:
