--- a/merkury_MI_WW107_199W.yaml
+++ b/merkury_MI_WW107_199W.yaml
@@ -3,39 +3,12 @@ substitutions:
   pretty_name: ""
   device_type: "Merkury MI-WW107-199W"
   icon: ""
+  board: "esp01_1m"
+  framework_version: "recommended"
+  logger_level: INFO
 
-esphome:
-  name: ${device_name}
-  comment: "${device_type}"
-
-esp8266:
-  board: esp01_1m
-
-logger:
-
-api:
-  encryption:
-    key: !secret api_key
-
-ota:
-  password: !secret ota_password
-
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-  power_save_mode: HIGH # for ESP8266 LOW/HIGH are mixed up, esphome/issues/issues/1532
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
-  ap:
-    ssid: "${device_name} Fallback"
-    password: !secret fallback_password
-
-captive_portal:
-
-# web_server:
-#   port: 80
-#   auth:
-#     username: admin
-#     password: !secret web_server_password
+# Common ESP8266 Config
+<<: !include .common_esp8266.yaml
 
 # Device Specific Config
 binary_sensor:
@@ -56,9 +29,9 @@ light:
     restore_mode: RESTORE_DEFAULT_OFF
   
   - platform: status_led
-    id: led_green
+    id: front_led
     name: "${device_name} Backlight"
-    restore_mode: ALWAYS_ON
+    restore_mode: RESTORE_DEFAULT_ON
     entity_category: config
     internal: true
     pin:
