--- a/shelly_1PM.yaml
+++ b/shelly_1PM.yaml
@@ -4,43 +4,12 @@ substitutions:
   max_temp: "70.0"
   device_type: "Shelly 1PM"
   icon: ""
+  board: "esp01_1m"
+  framework_version: "recommended"
+  logger_level: INFO
 
-esphome:
-  name: ${device_name}
-  comment: "${device_type}"
-
-esp8266:
-  board: esp01_1m
-
-logger:
-
-api:
-  encryption:
-    key: !secret api_key
-
-ota:
-  password: !secret ota_password
-
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-  power_save_mode: HIGH # for ESP8266 LOW/HIGH are mixed up, esphome/issues/issues/1532
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
-  ap:
-    ssid: "${device_name} Fallback"
-    password: !secret fallback_password
-
-time:
-  - platform: homeassistant
-    id: homeassistant_time
-
-captive_portal:
-
-# web_server:
-#   port: 80
-#   auth:
-#     username: admin
-#     password: !secret web_server_password
+# Common ESP8266 Config
+<<: !include .common_esp8266.yaml
 
 # Device Specific Config
 sensor:
